# tiygate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  README_zh.md  docker-compose.yml
.github/workflows/: build-and-push-image.yml  create-prerelease.yml  gen-changelog.yml
crates/admin/: Cargo.toml
crates/admin/src/: api.rs  auth.rs  brute_force.rs  handlers.rs  lib.rs  oauth.rs  state.rs
crates/admin/tests/: brute_force.rs  integration.rs
crates/auth/: Cargo.toml
crates/auth/src/: api_key.rs  bearer.rs  lib.rs  oauth.rs  provider_oauth.rs
crates/cache/: Cargo.toml
crates/cache/src/: embedding_cache.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: header_forward.rs  lib.rs  quota.rs  redaction.rs  tests.rs  tracing_ctx.rs
crates/core/src/ir/: mod.rs
crates/core/src/pipeline/: mod.rs
crates/core/src/protocol/: lossy.rs  mod.rs
crates/core/src/provider/: mod.rs  oauth.rs
crates/core/src/routing/: mod.rs
crates/core/src/telemetry/: mod.rs
crates/protocols/: Cargo.toml
crates/protocols/src/: chat_completions.rs  embeddings.rs  error_body.rs  gemini.rs  images.rs  lib.rs  messages.rs  responses.rs
crates/protocols/src/snapshots/: tiygate_protocols__chat_completions__tests__snapshot_decode_request.snap  tiygate_protocols__chat_completions__tests__snapshot_decode_tool_request.snap  tiygate_protocols__embeddings__tests__snapshot_decode_request.snap  tiygate_protocols__gemini__tests__snapshot_decode_request.snap  tiygate_protocols__images__tests__snapshot_generations_decode_request.snap.new  tiygate_protocols__messages__tests__snapshot_decode_request.snap
crates/protocols/tests/: cross_protocol.rs  images.rs  lossy_conversion.rs  streaming_robustness.rs  streaming_transcode.rs  usage_alignment.rs
crates/provider-bedrock/: Cargo.toml
crates/provider-bedrock/src/: executor.rs  lib.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  deepseek.rs  gemini.rs  lib.rs  moonshot.rs  oauth.rs  ollama.rs  openai.rs  openai_compatible.rs  opencode.rs  openrouter.rs  xai.rs  zenmux.rs  zhipu.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: app.rs  cli.rs  config.rs  drain.rs  ingress.rs  ingress_phase4.rs  lib.rs  main.rs  models.rs  oauth_manager.rs  quota.rs  telemetry.rs  trace.rs  webui.rs
crates/server/src/ingress/: executors.rs  fallback.rs  handlers.rs  headers.rs  mod.rs  observability.rs  streaming.rs
crates/server/tests/: epoch_e2e.rs  helpers.rs  ingress_smoke.rs  models_catalog.rs  phase4_epoch_e2e.rs  phase4_smoke.rs  redirect_auth.rs  request_logging.rs  wiremock_images.rs  wiremock_providers.rs
crates/store/: Cargo.toml  build.rs
crates/store/data/: models_dev_api.json
crates/store/migrations/config/: 20260101000001_init.sql  20260201000001_route_strategy.sql  20260301000001_provider_models_endpoint.sql
crates/store/migrations/log/: 20260101000001_init.sql  20260101000002_payloads.sql  20260101000003_egress_target.sql  20260101000004_client_sse_parsed.sql  20260101000005_truncation_reason.sql  20260101000006_request_log_truncation.sql  20260101000007_finish_reason.sql  20260101000008_token_stats.sql  20260101000009_filter_dimensions.sql  20260101000010_payload_archive.sql  20260101000012_stream_duration.sql  20260101000014_request_attempts.sql
crates/store/migrations/postgres/config/: 20260101000001_init.sql  20260201000001_route_strategy.sql  20260301000001_provider_models_endpoint.sql
crates/store/migrations/postgres/log/: 20260101000001_init.sql  20260101000002_payloads.sql  20260101000003_egress_target.sql  20260101000004_client_sse_parsed.sql  20260101000005_truncation_reason.sql  20260101000006_request_log_truncation.sql  20260101000007_finish_reason.sql  20260101000008_token_stats.sql  20260101000009_filter_dimensions.sql  20260101000011_archive_ready_backfill.sql  20260101000012_stream_duration.sql  20260101000014_request_attempts.sql
crates/store/src/: audit.rs  config.rs  config_store.rs  db.rs  encryption.rs  keys.rs  lib.rs  log_sink.rs  model_catalog.rs  models.rs  retention.rs  settings_keys.rs  token_stats.rs
crates/store/src/archive/: client.rs  mod.rs  worker.rs
crates/store/src/log_sink/: mod.rs  oltp.rs  stdout.rs
docs/: admin-api.md  ai-gateway-architecture-design.md  deployment-operations.md  encryption.md  error-code-matrix.md  log-schema.md  migrations.md  models-endpoint-protocol.md  protocol-capability-matrix.md  protocol-conversion-diagram.html  quota.md  redaction.md  request-logging.md  request-timing-diagram.html  routing-strategies.md  webui-design-system.md  webui-requirements.md
scripts/: build-with-webui.sh  make-ico.mjs  verify-deps.sh
src-tauri/: Cargo.toml  Info.plist
src-tauri/src/: commands.rs  lib.rs
webui/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
webui/public/: manifest.json
webui/src/: App.tsx  index.css  main.tsx
webui/src/api/: client.ts  resources.ts  types.ts
webui/src/auth/: AuthContext.tsx  Login.tsx  ProtectedRoute.tsx  setup.ts  token.ts
webui/src/components/: BootScreen.tsx  LanguageSwitcher.tsx  Layout.tsx  PageHeader.tsx  Pagination.tsx  ThemeSwitcher.tsx  TokenHeatmap.tsx  TokenSummaryBar.tsx  ui.tsx
webui/src/components/ui/: badge.tsx  button.tsx  card.tsx  combobox.tsx  confirm-dialog.tsx  dialog.tsx  dropdown.tsx  feedback.tsx  field.tsx  index.ts  input.tsx  json-viewer.tsx  select.tsx  switch.tsx  table.tsx  toast.tsx  tooltip.tsx
webui/src/i18n/: index.ts
webui/src/i18n/locales/: en.ts  zh.ts
webui/src/lib/: format.ts  oauth.ts  theme.tsx  vendors.tsx
webui/src/pages/: ApiKeys.tsx  Audit.tsx  ConfigManagement.tsx  Dashboard.tsx  IntegrationGuide.tsx  OAuth.tsx  Providers.tsx  RequestLogs.tsx  Routes.tsx  Settings.tsx  Setup.tsx
