[package]
name = "tiygate-admin"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tiygate-core.workspace = true
tiygate-store.workspace = true
tiygate-providers.workspace = true
oauth2.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid.workspace = true
subtle.workspace = true
chrono.workspace = true
async-trait.workspace = true
sqlx.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile = "3"
tower.workspace = true
http-body-util = "0.1"
serial_test.workspace = true

[lints]
workspace = true
