[package]
name = "tiygate-admin"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
# `redis` enables the Redis-backed `RedisBruteForceLimiter`. When
# this feature is *off* (the default) the `build_limiter` factory
# always returns the in-memory limiter, even when
# `TIYGATE_REDIS_URL` is set.
redis = ["dep:redis"]

[dependencies]
tiygate-core.workspace = true
tiygate-store.workspace = true
tiygate-providers.workspace = true
tiygate-auth.workspace = true
oauth2.workspace = true
reqwest.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid.workspace = true
subtle.workspace = true
bytes.workspace = true
chrono.workspace = true
async-trait.workspace = true
sqlx.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
# Optional Redis client. Pulled in only when the `redis` feature is
# enabled so the admin crate builds without a Redis dependency by
# default. Mirrors the `redis` definition in `crates/core/Cargo.toml`.
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "script"], optional = true }

[dev-dependencies]
tempfile = "3"
tower.workspace = true
http-body-util = "0.1"
serial_test.workspace = true
wiremock.workspace = true

[lints]
workspace = true
