[package]
name = "tiygate-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tiygate-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
http.workspace = true
tokio.workspace = true
async-trait.workspace = true
oauth2.workspace = true
parking_lot.workspace = true
zeroize.workspace = true

[lints]
workspace = true
