[package]
name = "tiygate-cache"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tiygate-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
moka.workspace = true
uuid.workspace = true

[lints]
workspace = true
