[package]
name = "tiygate-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
http.workspace = true
reqwest.workspace = true
dashmap.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
pin-project.workspace = true
inventory.workspace = true
indexmap.workspace = true
url.workspace = true
rand.workspace = true
backoff.workspace = true
hdrhistogram.workspace = true
async-trait.workspace = true

[lints]
workspace = true
