[package]
name = "tiygate-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# `redis-quota` enables the real Redis-backed `RedisQuota`
# implementation. When this feature is *off* (the default) the
# `RedisQuota::new` constructor returns a counter that delegates to
# `InMemoryQuota` so the binary builds without a Redis dependency
# and the data plane still works. Operators enable the feature
# (`cargo build --features redis-quota`) and set
# `TIYGATE_REDIS_URL=redis://...` to switch to a shared counter
# across replicas.
redis-quota = ["dep:redis"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
http.workspace = true
reqwest.workspace = true
dashmap.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
pin-project.workspace = true
inventory.workspace = true
indexmap.workspace = true
url.workspace = true
rand.workspace = true
backoff.workspace = true
hdrhistogram.workspace = true
async-trait.workspace = true
# Optional Redis client. Pulled in only when the `redis-quota`
# feature is enabled (see [features] above).
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "script"], optional = true }

[lints]
workspace = true
