[package]
name = "tiygate-protocols"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tiygate-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
futures.workspace = true
tokio.workspace = true
pin-project.workspace = true
http.workspace = true
inventory.workspace = true
eventsource-stream.workspace = true

[dev-dependencies]
proptest.workspace = true
insta.workspace = true
chrono.workspace = true

[lints]
workspace = true
