[package]
name = "tiygate-provider-bedrock"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tiygate-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
http.workspace = true
tokio.workspace = true
futures.workspace = true
bytes.workspace = true
chrono.workspace = true
url.workspace = true
async-trait.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
async-stream.workspace = true
inventory.workspace = true

[dev-dependencies]
wiremock.workspace = true

[lints]
workspace = true
