[package]
name = "tiygate-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "tiygate"
path = "src/main.rs"

[features]
# ---------------------------------------------------------------------------
# Integration features — control which tiygate sub-crates are linked in.
# Disable these to produce a smaller binary that only contains the parts of
# the system you actually deploy.
# ---------------------------------------------------------------------------
default = ["admin", "cache", "providers", "tracing", "dotenv", "control-plane"]

# Embedded WebUI (rust-embed bundles webui/dist into the binary and
# serves it under /admin/ui). NOT in `default`: the feature embeds
# `webui/dist` at compile time, so the frontend must be built first
# (`cd webui && npm run build`). Keeping it opt-in means a fresh clone
# can build the backend without the prebuilt frontend. Enable it (or
# use scripts/build-with-webui.sh) to ship the console.
webui = ["dep:rust-embed", "dep:mime_guess"]

# Control plane: config CRUD / admin HTTP surface from `tiygate-admin`.
admin = ["dep:tiygate-admin"]

# In-memory response cache from `tiygate-cache`.
cache = ["dep:tiygate-cache"]

# Generic LLM provider integrations (OpenAI-compatible, Anthropic, ...).
providers = ["dep:tiygate-providers"]

# AWS Bedrock provider — pulls in the heavy AWS SDK stack.
# Keep this opt-in so deployments that do not need Bedrock do not pay for it.
bedrock = ["dep:tiygate-provider-bedrock"]

# Control-plane wiring: opens the SQLite/Postgres DB pool, runs
# migrations, mounts the admin router. Off by default in the
# library build so the data plane can run without a DB.
control-plane = []

# ---------------------------------------------------------------------------
# Runtime features — used by the default binary entry point (`main.rs`).
# `lib.rs` (and downstream binaries) can opt out of any of these.
# ---------------------------------------------------------------------------

# Wire up `tracing-subscriber` with the `json` formatter.
tracing = ["dep:tracing-subscriber"]

# Load `.env` files at startup.
dotenv = ["dep:dotenvy"]

[dependencies]
# Internal crates — most are opt-in via features above.
tiygate-core.workspace = true
tiygate-auth.workspace = true
tiygate-protocols.workspace = true
tiygate-store.workspace = true
tiygate-admin = { workspace = true, optional = true }
tiygate-cache = { workspace = true, optional = true }
tiygate-providers = { workspace = true, optional = true }
tiygate-provider-bedrock = { workspace = true, optional = true }
# HTTP server stack — required by the library surface.
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Always-on serialisation / runtime utilities.
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
uuid.workspace = true
bytes.workspace = true
http.workspace = true
arc-swap.workspace = true
chrono.workspace = true
reqwest.workspace = true
async-trait.workspace = true
clap.workspace = true
sha2.workspace = true
hex.workspace = true

# Optional runtime helpers (see [features] above).
tracing-subscriber = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
anyhow.workspace = true

# SSE parsing support — reserved for upcoming SSE decoder work in the
# ingress pipeline. Wired through here so the version is locked to the
# workspace-wide pin.
eventsource-stream.workspace = true

# Embedded WebUI assets — compile-time embed of webui/dist. Optional
# via the `webui` feature so a backend-only build does not require the
# prebuilt frontend.
rust-embed = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }

# `async-stream` and `pin-project` back the SseKeepaliveStream and the
# drive_upstream_stream bridge in ingress.rs. Both are workspace-pinned
# but need an explicit re-export here so this crate can use them.
async-stream.workspace = true
pin-project.workspace = true

[dev-dependencies]
wiremock.workspace = true

[lints]
# Inherit the workspace lints (`unwrap_used = "deny"`,
# `expect_used = "deny"`, `panic = "deny"`) for production lib
# code. Tests have a separate scope where the deny-by-default
# lints are relaxed — the large body of pre-existing tests
# uses `.expect()` / `.unwrap()` on the test happy path, and
# rewriting them all to `?` would balloon the diff with no
# test-coverage benefit. Production lib code is unaffected.
workspace = true
