[package]
name = "tiygate-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tiygate-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
sqlx.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
zeroize.workspace = true
subtle.workspace = true
rand.workspace = true
async-trait.workspace = true

[lints]
workspace = true
