[package]
name = "tiygate-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tiygate-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
sqlx.workspace = true
tokio.workspace = true
rust-embed.workspace = true
chrono.workspace = true
uuid.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
zeroize.workspace = true
subtle.workspace = true
rand.workspace = true
async-trait.workspace = true
sha2.workspace = true
hex.workspace = true
base64 = "0.22"
parking_lot.workspace = true
arc-swap.workspace = true
hmac = "0.12"
flate2 = "1"
bytes.workspace = true
reqwest.workspace = true
url.workspace = true
futures.workspace = true

[build-dependencies]
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
serial_test.workspace = true
wiremock.workspace = true

[lints]
workspace = true
